--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="imageContainer">
         <img name="rotatingImage" class="rotatingImage" />
     </div>
-<!-- mainContent section below images -->
+<!-- mainContent -->
 <div class="mainContent">
     <h1 class="firstSection" id="aboutUs">About Us and What We Do</h1>     
 
@@ -142,13 +142,28 @@
                 <tr>
                     <td class="foot"><a href="/index.html#aboutUS">About Us</a></td>
                     <td class="foot"><a href="/cats.html#0-4Weeks">0-4 Weeks Old</a></td>
+                    <td class="foot"><a href="/dogs.html#dietExercise">Diet & Exercise</a></td>
+                    <td class="foot"><a href="/birds.html#relationalNeeds">Relational Needs</a></td>
                 </tr>
                 <tr>
                     <td class="foot"><a href="/index.html#contactForm">Consultation Form</a></td>
                     <td class="foot"><a href="/cats.html#4wk-1yr">4 Weeks-1 Year Old</a></td>
+                    <td class="foot"><a href="/dogs.html#groomingHandling">Grooming and Handling</a></td>
+                    <td class="foot"><a href="/birds.html#depressionList">Signs of Depression</a></td>
+                    
                 </tr>
-                <tr></tr>
-                <tr></tr>
+                <tr>
+                    <td class="foot"></td>
+                    <td class="foot"><a href="/cats.html#1-7year">1-7 Years Old</a></td>
+                    <td class="foot"><a href="/dogs.html#vaccinationMedication">Vaccines & Medications</a></td>
+                    <td class="foot"></td>
+                </tr>
+                <tr>
+                    <td class="foot"></td>
+                    <td class="foot"><a href="/cats.html#over7">7+ Years Old</a></td>
+                    <td class="foot"></td>
+                    <td class="foot"></td>
+                </tr>
         </table>
         </div>
         <div class="copyRight">Copyright 2024 Paradigm Pet Professionals</div>
