--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="mainStyle.css">
     <script src="mainScript.js" defer></script>
     <title>Paradigm Pet Professionals Evidence Based Pet Care Advice for Every Pet</title>
+    
 </head>
 <body>
 <!-- logo section above topNav --> 
@@ -115,7 +116,7 @@
      <div class="additionalResources">
         <h2>Additional Resources</h2>
         <p class="addRes">Below are some additional resources that may be helpful to you in your pet adoption journey.</p>
-        <ul>
+        <ul class="additionalResources">
             <li><a href="https://home-home.org/" class="addRes">General Adoption Resources</a></li>
             <li><a href="https://www.aspca.org/" class="addRes">ASPCA</a></li>
             <li><a href="https://www.sterlingshelter.org/humane-society/koi-fish-rescue/" class="addRes">Fish Rescue</a></li>
