--- a/Faq.html
+++ b/Faq.html
@@ -34,7 +34,10 @@
             
     </div>
 
-
+    <div class="faq">
+        <h1>Frequently Asked Questions</h1>
+        <h2>COMING SOON</h2>
+    </div>
 
 
 
