--- a/dogs.html
+++ b/dogs.html
@@ -40,7 +40,7 @@
     <div class="mainContent">
         
         <div class="section1">
-            <h1 class="firstSection" id="catCare">Dog Care and Exercise </h1>
+            <h1 class="firstSection" id="catCare">Dog Care</h1>
             <p class="mainContentP">The World Canine Organization recognizes over 300 breeds of domestic dogs, a very social and diverse animal. Science shows a direct link between
                 dog adoption and health benefits for both dog and owner. Dogs are known to reduce stress, anxiety, and depression, ease loneliness, encourage exercise and playfulness, and even improve your cardiovascular health 
                 according to the American Heart Association Jounal found <a href="https://www.ahajournals.org/doi/10.1161/CIRCOUTCOMES.119.005554" target="_blank" >here</a>.
@@ -48,43 +48,50 @@
              </p>
         </div>
 
-         <h2 class="catH2" id="0-4Weeks">0 to 4 Weeks Old</h2>
+         <h2 class="catH2" id="dietExercise">Diet and Exercise</h2>
          <p class="mainContentP">
-            Whenever possible it is best practise to have kittens of this age nurse directly from their mother. Kittens should be monitered closely to ensure they are
-            growing at the correct weight and are healthy. Kittens may need to be fed from a bottle or other feeding device if it is noted that they are not gaining weight.
-            Kittens may not gain weight at an appropriate for several different reasons including but not limited to:
-            <div class="catList">
-                <ul class="cats">
-                    <li>too much competiting from litter mates over mothers milk</li>
-                    <li>digestive issues or disease</li>
-                    <li>unhealthy conditions or environment conditions</li>
-                </ul>
-            </div>
-            Formula should be specifically designed for kittens and should be served at body temperature. The Spruce Pets has an article on best kitten formulas that can be found
-             <a href="https://www.thesprucepets.com/best-kitten-milk-replacer-8572499" target="_blank">here</a>.
+            Dogs, like other animals, require different feeding regimens throughout their lifespans. When possible, puppies should be nursed by their mothers
+            for the first few months of life, bottle fed if mother is unavailable. After this puppies should be fed 3 times a day until they are 6 months old, then twice
+            a day from 6 months to 1 year. The ASPCA has a best practices article for feeding dogs throught their life that can be found 
+            <a href="https://www.aspca.org/pet-care/dog-care/dog-nutrition-tips" target="_blank">here</a>.
+         </p>
+         <p class="mainContentP">
+            It is extremely important for your dogs health for them to stay hydrated as dog's body is comprised of 60 - 70% water. Even a 10% loss of body water
+            can cause serious illness and 15% loss can be fatal. 
+         </p>
+         <p class="mainContentP">
+            Dogs and humans alike need regular daily exercise to remain healthy. Also like humans, fresh air and sunshine are both physically and mentally beneficial to 
+            your furry friends. Ecercise types and durations will vary depending on the type of dog as well as any health conditions but range from between 30 minutes
+            to 2 hours per day. This does not mean you need to rush out and sign your dog up for a CrossFit class, a nice walk around the block once or twice a day combined with 
+            some play with age appropriate dog toys can be more than enough. Bark has a list of their coolest dog toys to promote fun exercise
+            <a href="https://bark.co/blogs/fun/13-coolest-outdoor-dog-toys-of-all-time?srsltid=AfmBOopwmyx09eQS9sffJD0ZcQoDLwx7ut2NIq106OAN8pRox2R5hBSU" target="_blank">here</a>.
          </p>
 
-        <h2 class="catH2" id="4wk-1yr">4 Weeks to 1 Year Old</h2>
+        <h2 class="catH2" id="groomingHandling">Grooming and Handling</h2>
         <p class="mainContentP">
-            Around 3 to 4 weeks after birth kittens should be introduced to solid food. Initially this should be done by mixing formula with wet kitten food. The <a href="https://www.aspca.org/pet-care/cat-care/cat-nutrition-tips" target="_blank">
-                Cat Nutrition Page</a> of the ASPCA website suggests kittens should eat between hald and a cup of dry food or six to 9 ounces of wet food per day.  
-                It also states that kittens struggling to eat dry food can have small amounts of water added to the food to make it softer. Ensure you are using food 
-                for kittens as they provide the correct balance of nutrients to help your kitten grow. Architechtural Digest has a list of "The Best Kitten Food of 2024" <a href="https://www.architecturaldigest.com/reviews/pets/best-kitten-food" target="_blank">here</a>.
+            Nutrition and exercise are not the only factors in your dog's health, grooming and handling are also important. Dogs require regular brushing 
+            to avoid matting and tangling which can cause skin and health problems. Frequent brushing can also help reduce shedding and is a great way to keep an eye out for 
+            fleas, ticks, and other unwanted pests. Depending on your dogs strength and disposition, regular bathing can be good exercise for both of you. It is best to use shampoo
+            formulated for your dog and any underlying symptoms you may be trying to treat, like dry skin or fleas. After shampooing it is important to make sure your dog's fur is 
+            completely rinsed of any leftover shampoo to avoid skin irritation or rashes. 
         </p>
+        <p class="mainContentP">
+            Always handle your dogs with love and care do avoid accidental injury. Smaller dogs can be carried with one hand under the chest and the arm extenting down their 
+            hind quarters. Larger dogs require a two armed approach. One arm extended under the chest and the other extended under the rear, perpendicularly to the dog. Be 
+            sure to lift with your legs and watch your dog for signs of discomfort or pain.
+        </p>
+        
 
-        <h2 class="catH2" id="1-7year">1 to 7 Years Old</h2>
+        <h2 class="catH2" id="vaccinationMedication">Vaccinations and Medications</h2>
         <p class="mainContentP">
-            No longer considered kittens, cats in this age range need less nutrients. Cats within this age range should be fed twice a day and food should NOT be left out between feedings.
-            After 1 year old cats level of activity will decrease and their metabloism will start to slow, by ensuring your cat is only eating at the appropriate times 
-            and the correct amounts you can help reduce the risk of obesity and other health issues. Cats.com has a list of their top picks for cat foods 
-            <a href="https://cats.com/lp-best-cat-food-2024?utm_source=google&utm_medium=cpc&utm_id=21045350058&utm_content=160879627802&utm_term=best%20cat%20food&creativeId=688203765536&gclid=EAIaIQobChMIoInA4P2NiAMVXGBHAR0ZKhdZEAAYAyAAEgJ0xPD_BwE&gad_source=1" target="_blank">here</a>.
+            It is essential to consult with your veterinarian about the best vaccination schedule for your dog. There are a standard set of vaccines recommended for all 
+            dogs, including rabies, parvovirus, canine hepatitis, and distemper. Your vet may also recommend additional vaccines based on your dog's lifestyle and risk factors.
+            The ASPCA has an article further explaining vaccinations <a href="https://www.aspca.org/pet-care/general-pet-care/vaccinations-your-pet" target="_blank">here</a>.
         </p>
-        <h2 class="catH2" id="over7">Over 7 Years Old</h2>
         <p class="mainContentP">
-            Like all living beings our elderly felines need different care and activity levels than their younger counterparts.  
-            Cats at this stage should be fed a diet of higher protiens and lower fats and calories. It is important to read product labels for 
-            specific protein types, like salmon, as oppossed to broader categories like "meat" which could contain filler products and less proteins. 
-            Integricare has a list of the best cat foods for senior cats <a href="https://resources.integricare.ca/blog/senior-cat-food" target="_blank">here</a>.
+            Medications are another important aspect of your dog's health. It is very important to consult with your vet before giving any medication to your furry friend. 
+            Your vet may recommend monthly heartworm medication, flea and tick prevention, or other medications based on your dog. Be sure to follow instructions carefully 
+            and ask your vet if you have any questions or concerns.
         </p>
     </div>
 
