--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     <h2 class="motto">Nature gave humanity a gift in the form of pets</h2>
     </div>
 <!-- topNav section below logoHeader -->
-    <div class="topNav">
-        <a href="/index.html" class="active">Home</a>
-        <a href="/Cats.html">Cats</a>
-        <a href="/Dogs.html">Dogs</a>
-        <a href="/Birds.html">Birds</a>
-        <a href="/Faq.html">FAQ</a>
+<div class="topNav">
+    <a href="/index.html">Home</a>
+    <a href="/Cats.html">Cats</a>
+    <a href="/Dogs.html" class="active">Dogs</a>
+    <a href="/Birds.html">Birds</a>
+    <a href="/Faq.html">FAQ</a>
+ <!--my skills are not advanced enough to successfully create dropdown menus under the main menu items linking to the page sections. -->   
+    <form action="searchSite" class="searchBox">
+        <label id="searchTextBox" name="searchTextBox" for="searchTextBox">Search Our Sight:</label>
+        <input type="search" name="searchTextBox" id="searchTextBox">
+        <button type="submit" id="searchButton">&#128269 Search</button>
+    </form>
         
-        <form action="searchSite" class="searchBox">
-            <label id="searchTextBox" name="searchTextBox" for="searchTextBox">Search Our Sight:</label>
-            <input type="search" name="searchTextBox" id="searchTextBox">
-            <button type="submit" id="searchButton">&#128269 Search</button>
-        </form>
-            
-    </div>
+</div>
 <!-- images section below topNav -->
     <div class="imageContainer">
         <img name="rotatingImage" class="rotatingImage" />
